Loose Convrsion To R-Desktop Extension